--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -56,10 +56,10 @@
 					<dd>by <a href="http://twitter.com/mda">@mda</a>, <a href="http://twitter.com/fat">@fat</a> and <a href="https://github.com/orgs/twbs/people">team</a>,</dd>
 					<dt><a href="http://glyphicons.com/">Glyphicons</a></dt>
 					<dd>by Jan Kovařík,</dd>
-					<dt><a href="http://www.clonk.de/cr.php?lng={% trans "en" %}">Clonk Rage logo</a></dt>
-					<dd>with friendly permission from <a href="http://www.clonk.de/redwolf.php?lng={% trans "en" %}">RedWolfDesign</a>,</dd>
+					<dt><a href="http://www.clonk.de/cr.php">Clonk Rage logo</a></dt>
+					<dd>with <a href="http://www.clonk.de/developer.php#license_content">friendly permission</a> from <a href="http://www.clonk.de/redwolf.php">Matthes Bender</a>,</dd>
 					<dt><a href="http://git.openclonk.org/openclonk-resources.git/blob/HEAD:/graphics/OpenClonkLogo.xcf">OpenClonk logo</a></dt>
-					<dd>by "<a href="http://forum.openclonk.org/user_info.pl?uid=37">MrBeast</a>" at <a href="http://openclonk.org/">openclonk.org</a>,</dd>
+					<dd>by <a href="http://forum.openclonk.org/user_info.pl?uid=37">MrBeast</a> at <a href="http://openclonk.org/">openclonk.org</a>,</dd>
 					<dt><a href="http://subtlepatterns.com/debut-light/">Debut Light</a>  <span class="text-muted">(background texture)</span></dt>
 					<dd>by <a href="http://lukemcdonald.com/">Luke McDonald</a> via <a href="http://subtlepatterns.com/">Subtle Patterns</a>.</dd>
 				</dl>
@@ -92,20 +92,20 @@
                         <div class="head">
                             <dt><img src="{{resources}}/lorry/img/benedict.png" class="img-circle">
                             <a href="https://beheh.de/">Benedict Etzel</a> <span class="text-muted">/ <a href="{{base}}/users/B_E" class="text-muted">B_E</a></span></dt>
-                            <dd>founder & developer.</dd>
+                            <dd>Founder & Developer.</dd>
                         </div>
                     </div>
                     <div class="col-md-12 col-sm-6">
                         <hr class="hidden-xs hidden-sm">
                         <h3 id="credits">{% trans "Credits" %}</h3>
                         <dl>
-                            <dt><span class="text-muted">thanking the</span> <a href="http://ccan.de/" title="[si&#720;k&#603;n]">CCAN</a>
-                            <dd>for hosting addons for many years,</dd>
-                            <dt><span class="text-muted">thanking the</span> <a href="http://clonkspot.org/">Clonkspot community</a>
+                            <dt><span class="text-muted">Thanking the</span> <a href="http://clonkspot.org/" title="Hallo Nachtfalter!">Clonkspot community</a></dt>
                             <dd>for much-needed feedback and thoughts,</dd>
-                            <dt><span class="text-muted">thanking the</span> <a href="http://forum.openclonk.org/">OpenClonk community</a></dt>
+                            <dt><span class="text-muted">thanking the</span> <a href="http://forum.openclonk.org/" title="Back to the rocks">OpenClonk community</a></dt>
                             <dd>for inspiration and for creating OpenClonk,</dd>
-                            <dt><span class="text-muted">thanking all</span> content creators</dt>
+		            <dt><span class="text-muted">thanking the</span> <a href="http://ccan.de/" title="[si&#720;k&#603;n]">CCAN</a></dt>
+                            <dd>for hosting addons for so many years,</dd>
+                            <dt><span class="text-muted">thanking all</span> <span title="{% if user_login %}That's you!{% else %}That could be you!{% endif %}">content creators</span></dt>
                             <dd>for making Clonk an immortal game,</dd>
                             <dt><span class="text-muted">and thanking</span> Matthes Bender</dt>
                             <dd>for imagining and creating Clonk.</dd>
